@@ -20,6 +20,7 @@ package org.eclipse.jetty.servlet;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -1283,15 +1284,18 @@ public class ServletHolder extends Holder<Servlet> implements UserIdentity.Scope
      * @throws ServletException if unable to create a new instance
      * @throws IllegalAccessException if not allowed to create a new instance
      * @throws InstantiationException if creating new instance resulted in error
+     * @throws NoSuchMethodException if creating new instance resulted in error
+     * @throws InvocationTargetException If creating new instance throws an exception
      */
-    protected Servlet newInstance() throws ServletException, IllegalAccessException, InstantiationException
+    protected Servlet newInstance() throws ServletException, IllegalAccessException, InstantiationException,
+        NoSuchMethodException, InvocationTargetException
     {
         try
         {
             ServletContext ctx = getServletHandler().getServletContext();
             if (ctx instanceof ServletContextHandler.Context)
                 return ((ServletContextHandler.Context)ctx).createServlet(getHeldClass());
-            return getHeldClass().newInstance();
+            return getHeldClass().getDeclaredConstructor().newInstance();
         }
         catch (ServletException se)
         {
@@ -1300,6 +1304,10 @@ public class ServletHolder extends Holder<Servlet> implements UserIdentity.Scope
                 throw (InstantiationException)cause;
             if (cause instanceof IllegalAccessException)
                 throw (IllegalAccessException)cause;
+            if (cause instanceof NoSuchMethodException)
+                throw (NoSuchMethodException)cause;
+            if (cause instanceof InvocationTargetException)
+                throw (InvocationTargetException)cause;
             throw se;
         }
     }
