@@ -32,7 +32,6 @@ import java.util.concurrent.ConcurrentHashMap;
 
 import org.eclipse.jetty.util.IO;
 import org.eclipse.jetty.util.Loader;
-import org.eclipse.jetty.util.QuotedStringTokenizer;
 import org.eclipse.jetty.util.TypeUtil;
 import org.eclipse.jetty.util.log.Log;
 import org.eclipse.jetty.util.log.Logger;
@@ -97,6 +96,15 @@ public class JSON
 
     public JSON()
     {
+    }
+
+    /**
+     * Reset the default JSON behaviors to default
+     */
+    public static void reset()
+    {
+        DEFAULT._convertors.clear();
+        DEFAULT._stringBufferSize = 1024;
     }
 
     /**
@@ -234,6 +242,98 @@ public class JSON
     public static Object parse(InputStream in, boolean stripOuterComment) throws IOException
     {
         return DEFAULT.parse(new StringSource(IO.toString(in)),stripOuterComment);
+    }
+
+    private void quotedEscape(Appendable buffer, String input)
+    {
+        try
+        {
+            buffer.append('"');
+            if (input != null && input.length() > 0)
+            {
+                escapeString(buffer, input);
+            }
+            buffer.append('"');
+        }
+        catch (IOException e)
+        {
+            throw new RuntimeException(e);
+        }
+    }
+
+    public void escapeString(Appendable buffer, String input) throws IOException
+    {
+        // default escaping here.
+
+        for (int i = 0; i < input.length(); ++i)
+        {
+            char c = input.charAt(i);
+
+            // ASCII printable range
+            if ((c >= 0x20) && (c <= 0x7E))
+            {
+                // Special cases for quotation-mark, reverse-solidus, and solidus
+                if ((c == '"') || (c == '\\')
+                  /* solidus is optional - per Carsten Bormann (IETF)
+                     || (c == '/') */)
+                {
+                    buffer.append('\\').append(c);
+                }
+                else
+                {
+                    // ASCII printable (that isn't escaped above)
+                    buffer.append(c);
+                }
+            }
+            else
+            {
+                // All other characters are escaped (in some way)
+
+                // First we deal with the special short-form escaping
+                if (c == '\b') // backspace
+                    buffer.append("\\b");
+                else if (c == '\f') // form-feed
+                    buffer.append("\\f");
+                else if (c == '\n') // line feed
+                    buffer.append("\\n");
+                else if (c == '\r') // carriage return
+                    buffer.append("\\r");
+                else if (c == '\t') // tab
+                    buffer.append("\\t");
+                else if (c < 0x20 || c == 0x7F) // all control characters
+                {
+                    // default behavior is to encode
+                    buffer.append(String.format("\\u%04x", (short)c));
+                }
+                else
+                {
+                    // optional behavior in JSON spec
+                    escapeUnicode(buffer, c);
+                }
+            }
+        }
+    }
+
+    /**
+     * Per spec, unicode characters are by default NOT escaped.
+     * This overridable allows for alternate behavior to escape those with your choice
+     * of encoding.
+     *
+     * <code>
+     * protected void escapeUnicode(Appendable buffer, char c) throws IOException
+     * {
+     *     // Unicode is slash-u escaped
+     *     buffer.append(String.format("\\u%04x", (int)c));
+     * }
+     * </code>
+     *
+     * @param buffer
+     * @param c
+     * @throws IOException
+     */
+    protected void escapeUnicode(Appendable buffer, char c) throws IOException
+    {
+        buffer.append(c);
     }
 
     /**
@@ -428,7 +528,7 @@ public class JSON
             while (iter.hasNext())
             {
                 Map.Entry<?,?> entry = (Map.Entry<?,?>)iter.next();
-                QuotedStringTokenizer.quote(buffer,entry.getKey().toString());
+                quotedEscape(buffer, entry.getKey().toString());
                 buffer.append(':');
                 append(buffer,entry.getValue());
                 if (iter.hasNext())
@@ -573,7 +673,7 @@ public class JSON
             return;
         }
 
-        QuotedStringTokenizer.quote(buffer,string);
+        quotedEscape(buffer,string);
     }
 
     // Parsing utilities
@@ -609,7 +709,7 @@ public class JSON
         {
             try
             {
-                Convertible conv = (Convertible)type.newInstance();
+                Convertible conv = (Convertible)type.getDeclaredConstructor().newInstance();
                 conv.fromJSON(map);
                 return conv;
             }
@@ -1353,7 +1453,7 @@ public class JSON
                 if (c == 0)
                     throw new IllegalStateException();
                 _buffer.append(c);
-                QuotedStringTokenizer.quote(_buffer,name);
+                quotedEscape(_buffer,name);
                 _buffer.append(':');
                 append(_buffer,value);
                 c = ',';
@@ -1372,7 +1472,7 @@ public class JSON
                 if (c == 0)
                     throw new IllegalStateException();
                 _buffer.append(c);
-                QuotedStringTokenizer.quote(_buffer,name);
+                quotedEscape(_buffer,name);
                 _buffer.append(':');
                 appendNumber(_buffer, value);
                 c = ',';
@@ -1391,7 +1491,7 @@ public class JSON
                 if (c == 0)
                     throw new IllegalStateException();
                 _buffer.append(c);
-                QuotedStringTokenizer.quote(_buffer,name);
+                quotedEscape(_buffer,name);
                 _buffer.append(':');
                 appendNumber(_buffer, value);
                 c = ',';
@@ -1410,7 +1510,7 @@ public class JSON
                 if (c == 0)
                     throw new IllegalStateException();
                 _buffer.append(c);
-                QuotedStringTokenizer.quote(_buffer,name);
+                quotedEscape(_buffer,name);
                 _buffer.append(':');
                 appendBoolean(_buffer,value?Boolean.TRUE:Boolean.FALSE);
                 c = ',';
@@ -1568,7 +1668,6 @@ public class JSON
         public void add(String name, boolean value);
     }
 
-    /* ------------------------------------------------------------ */
     /**
      * JSON Convertible object. Object can implement this interface in a similar
      * way to the {@link Externalizable} interface is used to allow classes to
